# logbook

./: .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  SPEC.md  UX-REDESIGN-DEMO.html  index.html  lint-staged.config.js  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.prod.json
src-tauri/2026/06/: 2026-06-12.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error_log.rs  files.rs  integrity.rs  lib.rs  models.rs  operation_log.rs  scan.rs  single_instance.rs  window_state.rs
src-tauri/src/cli/: commitments.rs  dimensions.rs  entries.rs  install.rs  migrate.rs  mod.rs  output.rs  root_path.rs
src-tauri/tests/: cli_integration.rs  commitment_editor_integration.rs  commitment_progress_integration.rs  contract_test.rs  cross_dimension_validation_integration.rs  data_version_integration.rs  dimension_editor_integration.rs  entry_crud_integration.rs  fixture_integration.rs  integrity_guard_integration.rs  migration_test.rs  monthly_dimensions_integration.rs  op_log_verify_integration.rs  operation_log_integration.rs  recheck_integrity_integration.rs  recovery_category_integration.rs  scan_integration.rs
src-tauri/tests/contracts/: append_entry.yaml  create_starter_files.yaml  delete_entry.yaml  get_available_months.yaml  get_commitment_progress.yaml  get_commitments.yaml  get_entries.yaml  set_day_note.yaml  update_entry.yaml
src-tauri/tests/fixtures/: template.yaml  (+1 more)
(+267 files in other folders)
