[package]
name = "logbook"
version = "0.4.4"
description = "Personal work time tracking app"
authors = ["you"]
edition = "2021"
default-run = "logbook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
notify = "6"
chrono = "0.4"
regex = "1"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "logbook-cli"
path = "src/bin/logbook-cli.rs"
